--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>
-        Home Page- My ASP.NET Application
+        Home Page
     </title>
     <link href="Content/Site.css" rel="stylesheet" />
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
@@ -12,11 +12,11 @@
     <meta name="viewport" content="width=device-width" />
 </head>
 <body>
-    <form method="post" action="./Default.aspx" id="ctl01">
+    <form method="post" action="./" id="ctl01">
         <div class="aspNetHidden">
             <input type="hidden" name="__EVENTTARGET" id="__EVENTTARGET" value="" />
             <input type="hidden" name="__EVENTARGUMENT" id="__EVENTARGUMENT" value="" />
-            <input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwUKMjEwNDQyMTMxMw9kFgJmDw8WBB4PX19BbnRpWHNyZlRva2VuBSA2ZDRhZDM0NjgzM2U0NTk3YTI0ODM1OGRlZGY1NjBmNR4SX19BbnRpWHNyZlVzZXJOYW1lZWRkZCuj1jrbnNAKL76zooXn5FqN3YgPDGEfD84Ds7u/V6Ot" />
+            <input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwUKMjEwNDQyMTMxMw9kFgJmDw8WBB4PX19BbnRpWHNyZlRva2VuBSBhMzE1NmVjOWE0NDg0OWNmODZiZWFhOTI2NDA0MmY0ZR4SX19BbnRpWHNyZlVzZXJOYW1lZWRkZIZLRojrBNqhugzHJcH9x48Btcks6zwPVd3shvzvA7Ts" />
         </div>
 
         <script type="text/javascript">
@@ -36,19 +36,23 @@ function __doPostBack(eventTarget, eventArgument) {
         </script>
 
 
-        <script src="/WebResource.axd?d=6rAqxy2bz-aSWToo_MV3LleIsUnTDvYfS5f1_Y7rUwLDKydbeCa97cKuaVz0ETbKTkmTz4VX_G_NzyaCFnTd9DV1VuJeUjDKqQvuAVlrnwU1&amp;t=637350326898879360" type="text/javascript"></script>
+        <script src="/WebResource.axd?d=q6SJn96_gdIgolV9atBQKn2z6nKdVB4cdXE9dFagyW4hAdEDHA4yQSJKjDZwKtP7A2Lv96yHX0wa8EYvHb5msdFVJ2xG95gwfWeqqr1oHy01&amp;t=637350326898723119" type="text/javascript"></script>
 
 
-        <script src="/ScriptResource.axd?d=kQxKU-56B102OOo0R5TnLDFtjp7VO0GL3RSlfCbfP_VT6JTVpmDtHQcs1Ac1wCwtjp9p0y9ewJB0fhTnW-60cf_I1AGzmXA0pomWKiGDs5_DxrctQcXXnlMbkwjVrUUIkbKtWHhPsb6ma5DYGm1DgYSDSx6X6Tm8aoktIiOLdsN84xpAiTA7PEWgK3XZqUQd0&amp;t=2a797f5c" type="text/javascript"></script>
+        <script src="/ScriptResource.axd?d=uyncLMVCqyYqf0FA8LC8LoygAFHAPdfJzqD0eYHdsmPkYvxcrWBI1ENi85cRj2lSAy1p-BLQZH1q21bEtEviyE5daH_kYxpWSjU3g1AleBRKrLsdk5hSdJvf8GW63a2kv3gHTewjWtd6jOQMIq4JbVThypveMdC6swGBwmnf4Jn0tMusS8m-tXlIfkPWbbZS0&amp;t=2a797f5c" type="text/javascript"></script>
         <script type="text/javascript">
 //<![CDATA[
 if (typeof(Sys) === 'undefined') throw new Error('ASP.NET Ajax client-side framework failed to load.');
 //]]>
         </script>
 
-        <script src="/ScriptResource.axd?d=8MR2Vp34skxyjj51mV1ZjiWI2P7ezVSJiMiBrt9dkrY3laInO2rpLMKMHIW-R_CStAgabNiifmNrcKA2BVBXYb1aih16Leu1DxwAbe2rWzRoQdFmm4F3gX1DVYItapOiKdAY6o70OuPp59O_8mzeOSYQJ4HVgpEY0NsdNO1ky5ZcaAn-21BBA-_ZnURINe8S0&amp;t=2a797f5c" type="text/javascript"></script>
+        <script src="/ScriptResource.axd?d=vYiTimv1he-3aa_bKtc2pDjW_ezRxmkFP1M3XJFWat8T-OFXBoytQ7dJ_f1Y-Jd8fRlXvq45eWGnk5nuXdPyssm5_v7oJxUVM1yRd1H6yMpxRHkWSdwWK9oCqVYVFK_C1UpVfdgaKF4uAX8xouLdeBtgu1fFOiWx7Pb5Q-sk8fjOMHKkasSLbYD2WQae3WNP0&amp;t=2a797f5c" type="text/javascript"></script>
         <script src="Scripts/jquery-1.7.1.js" type="text/javascript"></script>
         <script src="Scripts/jquery-ui-1.8.20.js" type="text/javascript"></script>
+        <div class="aspNetHidden">
+
+            <input type="hidden" name="__VIEWSTATEGENERATOR" id="__VIEWSTATEGENERATOR" value="CA0B0334" />
+        </div>
         <script type="text/javascript">
 //<![CDATA[
 Sys.WebForms.PageRequestManager._initialize('ctl00$ctl09', 'ctl01', [], [], [], 90, 'ctl00');
@@ -59,25 +63,30 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl09', 'ctl01', [], [], [], 
             <div class="content-wrapper">
                 <div class="float-left">
                     <p class="site-title">
-                    	<img src="Images/Logo1.jpg" style="height: 134px; width: 271px"/>
-                    	<img src="Images/Logo3.jpg" style="height: 35px; width: 197px"/>
+                        <img src="Images/Logo1.jpg" style="height: 134px; width: 271px" />
                     </p>
                 </div>
                 <div class="float-right">
                     <section id="login">
 
                         <ul>
-                            <li><a href="Account/Register.aspx" id="ctl10_registerLink">Register</a></li>
-                            <li><a href="Account/Login.aspx" id="ctl10_loginLink">Log in</a></li>
+                            <li><a class="transparent_btn" href="#">Chinese</a></li>
+                            <li><a class="transparent_btn" href="#">English</a></li>
                         </ul>
+                        <!--                            <ul>
+                                                        <li><a href="Account/Register.aspx" id="ctl10_A1">Register</a></li>
+                                                        <li><a href="Account/Login.aspx" id="ctl10_A2">Log in</a></li>
+                                                    </ul>
+                        -->
 
                     </section>
                     <nav>
                         <ul id="menu">
-                            <li><a href="index.html">Home</a></li>
+                            <li><a href="Index.html">Home</a></li>
                             <li><a href="Menus.html">Menus</a></li>
-                            <li><a href="Others.html">OtherPromo</a></li>
-                            <li><a href="About.html">About</a></li>
+                            <li><a href="Menu_Sets.html">Meal Sets</a></li>
+                            <li><a href="Others.html">Promotions</a></li>
+                            <!--                        <li><a href="About.html">About</a></li>  -->
                             <li><a href="Contact.html">Contact</a></li>
                         </ul>
                     </nav>
@@ -89,29 +98,58 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl09', 'ctl01', [], [], [], 
             <section class="featured">
                 <div class="content-wrapper">
                     <hgroup class="title">
-                        <h1>YUANJULOU Chinese Cuisine</h1>
+                        <h2>YUANJULOU Chinese Cuisine</h2>
                     </hgroup>
                 </div>
             </section>
 
             <section class="content-wrapper main-content clear-fix">
 
-                <ol class="round">
-                    <li>
-                        <h4>YUANJULOU Chinese Cuisine</h4>
-                        YUANJULOU Chinese Cuisine is a fine chinese gourmet restaurant located in Markham Ontario. Managed and operated by famous Chinese Chef Mr. Ng who used to be a master chef in many chinese fine cuisine restaurants such as Casa-Imperial Fine Chinese Cuisine (名门金宴).
-                        <br /><br />
+                <hgroup class="title">
+                    <h2>緣聚樓</h2>
+                </hgroup>
+                <section>
+                    <header>
+                        <h3>Introduction</h3>
+                    </header>
+                    <p>
+                        <span class="label">YUANJULOU Chinese Cuisine</span>
+                        YUANJULOU Chinese Cuisine is a fine chinese gourmet restaurant located in Markham Ontario. Managed and operated by famous Chinese Chef Mr. Ng who used to be a master chef in many chinese fine cuisine restaurants.
+                        <br />
                         The restaurant features elegant decoration throughout their dining halls and private VIP rooms. Guest are treated to first class dining experience in a warm and friendly atomstphere.
-                        <br /><br />
-                        Open daily for traditional dim sum (lunch) and fine Chinese regional dining. To learn more click <a href="http://SkyViewFusionCuisine.com">hear</a>.
                         <br />
-                    </li>
+                        Open daily for traditional dim sum (lunch) and fine Chinese regional dining. To learn more click <a href="#">hear</a>.
+                        <br />
+                    <p>
+                    </p>
+                </section>
+                <section>
+                    <header>
+                        <h3>Photos</h3>
+                    </header>
+                    <div id="photoShow">
+                        <a class="imgLink" target="_blank" href="Images/Photos/Photo1.jpg">
+                            <img src="Images/Photos/Photo1.JPG" class="thumbnail" alt="Photo 1" width="400" />
+                        </a>
+                        <a class="imgLink" target="_blank" href="Images/Photos/Photo2.jpg">
+                            <img src="Images/Photos/Photo2.JPG" class="thumbnail" alt="Photo 2" width="400" />
+                        </a>
+                        <a class="imgLink" target="_blank" href="Images/Photos/Photo3.jpg">
+                            <img src="Images/Photos/Photo3.JPG" class="thumbnail" alt="Photo 3" width="400" />
+                        </a>
+                        <a class="imgLink" target="_blank" href="Images/Photos/Photo4.jpg">
+                            <img src="Images/Photos/Photo4.JPG" class="thumbnail" alt="Photo 4" width="400" />
+                        </a>
+                        <a class="imgLink" target="_blank" href="Images/Photos/Photo5.jpg">
+                            <img src="Images/Photos/Photo5.JPG" class="thumbnail" alt="Photo 5" width="400" />
+                        </a>
+                        <a class="imgLink" target="_blank" href="Images/Photos/Photo6.jpg">
+                            <img src="Images/Photos/Photo6.JPG" class="thumbnail" alt="Photo 6" width="400" />
+                        </a>
+                    </div>
 
-                    <li>
-                        <h4>Sky View Fusion Cuisine</h4>
-                        <br />
-                    </li>
-                </ol>
+                </section>
+
 
             </section>
         </div>
@@ -119,24 +157,11 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl09', 'ctl01', [], [], [], 
             <div class="content-wrapper">
                 <div class="float-left">
                     <p>
-                        &copy; Copyright 2021 Rainbow Information Technology Inc.
+                        &copy; Copyright 2021 - Rainbow Information Technology Inc.
                     </p>
                 </div>
             </div>
         </footer>
-
-        <div class="aspNetHidden">
-
-            <input type="hidden" name="__VIEWSTATEGENERATOR" id="__VIEWSTATEGENERATOR" value="CA0B0334" />
-        </div>
     </form>
-
-    <!-- Visual Studio Browser Link -->
-    <script type="application/json" id="__browserLink_initializationData">
-        {"appName":"Chrome","requestId":"01badb39c4644e649c5931c0d8939ee9"}
-    </script>
-    <script type="text/javascript" src="http://localhost:5149/d4986f17564b4f25a26e742e11627bba/browserLink" async="async"></script>
-    <!-- End Browser Link -->
-
 </body>
 </html>
