--- a/Contact.html
+++ b/Contact.html
@@ -82,7 +82,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl09', 'ctl01', [], [], [], 
                     </section>
                     <nav>
                         <ul id="menu">
-                            <li><a href="Index.html">Home</a></li>
+                            <li><a href="index.html">Home</a></li>
                             <li><a href="Menus.html">Menus</a></li>
                             <li><a href="Menu_Sets.html">Meal Sets</a></li>
                             <li><a href="Others.html">Promotions</a></li>
